Adding API for brands.update
