# app/Http/Controllers/Api/V1/BrandController.php
@@ -210,4 +210,78 @@ class BrandController extends Controller
 
         return $this->generalApiResponse(200, [$brand]);
     }
+
+    /**
+     *
+     * @OA\Put(
+     *     path="/api/v1/brand/{uuid}",
+     *     tags={"Brand"},
+     *     summary="Update an existing brand",
+     *     operationId="updateBrand",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="uuid",
+     *         in="path",
+     *         description="uuid of expected brand to update",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Input data properties",
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *             @OA\Schema(
+     *                 required={"title"},
+     *                 @OA\Property(
+     *                     property="title",
+     *                     description="Brand Title",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Page not found"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Unprocessable Entity"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal Server error"
+     *     )
+     * )
+     */
+    public function updateBrand($uuid, BrandRequest $request)
+    {
+        try {
+
+            $brand = Brand::where('uuid', $uuid)->firstOrFail();
+
+        } catch (\Throwable $th) {
+
+            return $this->generalApiResponse(200, [], 'Brand not found');
+
+        }
+
+        $inputedDataArray = $request->validated();
+        $inputedDataArray += ['slug' => str_replace(' ', '-', $request->title)];
+
+        $brand->update($inputedDataArray);
+
+        return $this->generalApiResponse(200, [$brand]);
+    }
 }
