# routes/api.php
@@ -32,6 +32,7 @@ Route::prefix('v1')->group(function () {
         Route::middleware(['auth.jwt'])->group(function () {
 
             Route::post('/create', [BrandController::class, 'storeBrand'])->name('brands.store');
+            Route::put('/{uuid}', [BrandController::class, 'updateBrand'])->name('brands.update');
 
         });
     });
